third_party/move/move-prover/tests/sources/functional/verify_table.exp
Move prover returns: exiting with verification errors
error: post-condition does not hold
    ┌─ tests/sources/functional/verify_table.move:133:9
    │
133 │         ensures spec_get(result.t, k1) == 23;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_table.move:129: add_R_fail (spec)
    =     at tests/sources/functional/verify_table.move:130: add_R_fail (spec)
    =     at tests/sources/functional/verify_table.move:126: add_R_fail
    =     at tests/sources/functional/verify_table.move:107: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_table.move:108: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_table.move:109: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_table.move:110: make_R
    =         result = <redacted>
    =     at tests/sources/functional/verify_table.move:111: make_R
    =         result = <redacted>
    =     at tests/sources/functional/verify_table.move:127: add_R_fail
    =     at tests/sources/functional/verify_table.move:131: add_R_fail (spec)
    =     at tests/sources/functional/verify_table.move:132: add_R_fail (spec)
    =     at tests/sources/functional/verify_table.move:133: add_R_fail (spec)

error: post-condition does not hold
   ┌─ tests/sources/functional/verify_table.move:31:9
   │
31 │         ensures spec_get(result, 1) == 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/verify_table.move:24: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_table.move:25: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_table.move:26: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_table.move:27: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_table.move:28: add_fail
   =         result = <redacted>
   =     at tests/sources/functional/verify_table.move:29: add_fail
   =     at tests/sources/functional/verify_table.move:31: add_fail (spec)
